--- a/README.html
+++ b/README.html
@@ -354,10 +354,22 @@ display: none;
 
 <div id="asc-2024-meeting" class="section level1">
 <h1>ASC 2024 Meeting</h1>
+</div>
+<div id="a-combined-theory-data-driven-approach-to-classifying-delinquency-risk-in-the-future-of-families-and-child-well-being-study" class="section level1">
+<h1>A Combined Theory Data-Driven Approach to Classifying Delinquency
+Risk in the Future of Families and Child Well-Being Study</h1>
 <div id="session-advancing-methodological-approaches-to-biopsychosocial-research" class="section level2">
 <h2>Session: Advancing Methodological Approaches to Biopsychosocial
 Research</h2>
 <p>Thu, Nov 14, 2:00 to 3:20pm, Salon 1 - Lower B2 Level</p>
+</div>
+<div id="whats-in-this-repository" class="section level2">
+<h2>What’s In This Repository?</h2>
+<ul>
+<li><p>index.html/index.qmd: The presentation slides (use HTML)</p></li>
+<li><p>Example_Workflow.html/Example_Workflow.qmd: A simple example of a
+neural net workflow (reach out if you have any Qs)</p></li>
+</ul>
 </div>
 </div>
 
